integrate openglfx and add gradle jvm options for correct building